@@ -5,6 +5,7 @@ Version 3.0.2
     - Feature: Adding refunded status to order filters
     - Feature: Add drop-down list for number of items per page for products & orders
     - Feature: Protocol change to https for API calls
+    - Feature: Managing delivery_date and custom_carrier parameters for sending action
     - Bugfix: Optimizing the display of errors in the order screen
     - Bugfix: [action] Correction of the dates of creation and update of the actions
     - Bugfix: [action] Deleting the shipping_date parameter in the action check request
